done with Introduction

--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -18,7 +18,7 @@
 Deformable Part Models}
 
 \author{
-\IEEEauthorblockN{Manato Hirabayashi, Shinpei Kato,\\ and Masato Edahiro}
+\IEEEauthorblockN{Manato Hirabayashi, Shinpei Kato, Masato Edahiro}
 \IEEEauthorblockA{Dept. of Information Engineering\\Nagoya University}
 \and
 \IEEEauthorblockN{Kazuya Takeda}
@@ -43,6 +43,10 @@ Technological Institute}
 \end{IEEEkeywords}
 
 \input{introduction.tex}
+\input{assumption.tex}
+\input{implementation.tex}
+\input{evaluation.tex}
+\input{conclusion.tex}
 
 \bibliographystyle{plain}
 {\footnotesize
