--- a/draft/abstract.tex
+++ b/draft/abstract.tex
@@ -6,11 +6,12 @@ A well-known approach uses histograms of oriented gradients (HOG)
 with deformable models to detect a car in an image.
 A major challenge of this approach can be found in computational cost
 introducing a real-time constraint problem in the real world.
-In this paper, we present implementation techniques using graphics
-processing units (GPUs) to accelerate computations of similarity scores
+In this paper, we present an implementation technique using graphics
+processing units (GPUs) to accelerate computations of scoring similarity
 of the input image and the pre-defined models.
 Our implementation considers not only the algorithm part but also the
-entire program structure.
-We experimentally show that our implementation using commodity GPUs can
-achieve speedups of 1.5x to 3x in frame-rate over sequential and
-multithreaded implementations using traditional CPUs.
+entire program structure for practical use.
+We also apply the presented technique for the real-world car detection
+program and demonstrate that our implementation using commodity
+GPUs can achieve speedups of 1.5x to 3x in frame-rate over sequential
+and multithreaded implementations using traditional CPUs.
