--- a/draft/references.bib
+++ b/draft/references.bib
@@ -88,6 +88,28 @@ pages = {675--681},
 year = {2000}
 }
 
+@misc{NVIDIA_CUDA,
+author = {NVIDIA},
+title = {{CUDA Documents}},
+howpublished = {\url{http://docs.nvidia.com/cuda/}},
+year = {2013}
+}
+
+@misc{NVIDIA_NVCC,
+author = {NVIDIA},
+title = {{CUDA TOOLKIT 5.0}},
+howpublished = {\url{http://developer.nvidia.com/cuda/cuda-downloads}},
+year = {2013}
+}
+
+@inproceedings{Niknejad12,
+author = {H. Niknejad and T. Kawano and M. Simizu and S. Mita},
+title = {{Vehicle detection using discriminatively trained part templates with variable size}},
+booktitle = {Proc. of the IEEE Intelligent Vehicles Symposium},
+pages = {766--771},
+year = {2000}
+}
+
 @techreport{Prisacariu09,
 author = {V. Prisacariu and I. Reid},
 title = {{fastHOG -- a Real-Time GPU Implementation of HOG}},
@@ -317,20 +339,6 @@ year = {2009}
 author = {NVIDIA},
 title = {{NVIDIA's next generation CUDA computer architecture: Kepler GK110}},
 howpublished = {\url{http://www.nvidia.com/content/PDF/kepler/NVIDIA-Kepler-GK110-Architecture-Whitepaper.pdf}},
-year = {2012}
-}
-
-@misc{NVIDIA_CUDA,
-author = {NVIDIA},
-title = {{CUDA Documents}},
-howpublished = {\url{http://docs.nvidia.com/cuda/}},
-year = {2013}
-}
-
-@misc{NVIDIA_NVCC,
-author = {NVIDIA},
-title = {{CUDA TOOLKIT 4.2}},
-howpublished = {\url{http://developer.nvidia.com/cuda/cuda-downloads}},
 year = {2012}
 }
 
