--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -14,8 +14,8 @@
 
 \begin{document}
 
-\title{GPU Implementations of HOG-based Object Detection using
-Deformable Part Models}
+\title{GPU Implementations of Object Detection using HOG
+Features and Deformable Models}
 
 \author{
 \IEEEauthorblockN{Manato Hirabayashi, Shinpei Kato, Masato Edahiro}
