--- a/draft/implementation.tex
+++ b/draft/implementation.tex
@@ -1,6 +1,19 @@
 \section{GPU Implementation}
 \label{sec:implementation}
 
+This paper presents GPU implementations of the existing object
+detection program using a pupular computer vision technique
+\cite{Niknejad12}.
+Our contribution is distinguished from prior GPU implementations work
+\cite{Chen11, Prisacariu09} in that we analyze the performance
+characteristics of the object detection program to figure out what part
+of the program should be accelerated using the GPU and our
+implementations build on this analysis optimizing performance.
+
+Note that this paper focuses on vehicle detection but the presented GPU
+implementations and our technical contribution can be applied for other
+object detection methods using HOG features and deformable models.
+
 \subsection{Analysis}
 
 \subsection{Approach}
