--- a/draft/references.bib
+++ b/draft/references.bib
@@ -72,6 +72,13 @@ pages = {508--511},
 year = {2009}
 }
 
+@inproceedings{Kato13,
+author = {S. Kato and J. Aumiller and S. Brandt},
+title = {{Zero-Copy I/O Processing for Low-Latency GPU Computing}},
+booktitle = {Proc. of the IEEE/ACM International Conference on Cyber-Physical Systems},
+year = {2013 (to appear)},
+}
+
 @inproceedings{Komorkiewicz12,
 author = {M. Komorkiewicz and M. Kluczewski and M. Gorgon},
 title = {{Floating Point HOG Implementation for Real-Time Multiple Object Detection}},
@@ -236,13 +243,6 @@ author = {S. Kato and M. McThrow and C. Maltzahn and S. Brandt},
 title = {{Gdev: First-Class GPU Resource Management in the Operating System}},
 booktitle = {Proc. of the USENIX Annual Technical Conference},
 year = {2012},
-}
-
-@inproceedings{Kato_ICCPS13,
-author = {S. Kato and J. Aumiller and S. Brandt},
-title = {{Zero-Copy I/O Processing for Low-Latency GPU Computing}},
-booktitle = {Proc. of the IEEE/ACM International Conference on Cyber-Physical Systems},
-year = {2013 (to appear)},
 }
 
 @inproceedings{Kato_RTAS11,
