--- a/draft/references.bib
+++ b/draft/references.bib
@@ -79,6 +79,13 @@ booktitle = {Proc. of the IEEE/ACM International Conference on Cyber-Physical Sy
 year = {2013 (to appear)},
 }
 
+@inproceedings{Kato13_2,
+author = {S. Kato},
+title = {{Implementing Open-Source CUDA Runtime}},
+booktitle = {Proc. of the 54the Programming Symposium},
+year = {2013},
+}
+
 @inproceedings{Komorkiewicz12,
 author = {M. Komorkiewicz and M. Kluczewski and M. Gorgon},
 title = {{Floating Point HOG Implementation for Real-Time Multiple Object Detection}},
