updated Abstract, Implementation, and Conclusion

--- a/draft/conclusion.tex
+++ b/draft/conclusion.tex
@@ -18,6 +18,15 @@ program runtime rather than particular algorithm parts of the program,
 our contribution is useful and significant for real-world applications
 of vision-based object detection. 
 
+To the best of our knowledge, this is the first piece of work that made
+a \textit{tight} coordination of object detection and parallel computing
+-- a core challenge of CPS.
+Specifically we showed that a measured and structured way of GPU
+programming is efficient for the object detection program and quantified
+the impact of GPUs in performance.
+Our conclusion is that GPUs are promising to meet the required
+performance of vision-based object detection in the real world.
+
 In future work, we plan to complement this work with systemized
 coordinations of computations and I/O devices.
 Since real-world applications require camera sensors to obtain input
