--- a/draft/implementation.tex
+++ b/draft/implementation.tex
@@ -149,3 +149,7 @@ may further improve performance but such a fine-grained performance
 tuning is outside the scope of this paper.
 
 \subsection{GPU Programming}
+
+Once computational blocks of the program to be parallelized are
+determined, we can focus on the program structure rather than the
+context to implement the program using the GPU.
