updated Evaluation (Experimetnal Setup)

--- a/draft/conclusion.tex
+++ b/draft/conclusion.tex
@@ -31,7 +31,7 @@ In future work, we plan to complement this work with systemized
 coordinations of computations and I/O devices.
 Since real-world applications require camera sensors to obtain input
 images while GPUs are compute devices off the host computer, the data
-I/O latency could become a bottleneck upon data buses.
+I/O latency could become a non-trivial bottleneck on the data bus.
 In this scenario, we need enhanced system support such as zero-copy
 approaches \cite{Kato13} to minimize the data latency raised between
 camera sensors and GPUs.
