--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -1,6 +1,7 @@
 \documentclass[10pt, conference, compsocconf]{IEEEtran}
-\usepackage[dvipdfmx]{color}
-\usepackage[dvipdfmx]{graphicx}
+%\usepackage[dvipdfmx]{color}
+%\usepackage[dvipdfmx]{graphicx}
+\usepackage{epsfig}
 \usepackage[tight,footnotesize]{subfigure}
 \usepackage{subfigure}
 \usepackage{url}
