--- a/draft/evaluation.tex
+++ b/draft/evaluation.tex
@@ -26,3 +26,29 @@ primary object detection part.
 
 \subsection{Experimental Results}
 \label{sec:results}
+
+\begin{figure}[t]
+ \begin{center}
+  \includegraphics[width=\hsize]{fig/float_exe_time.eps}\\
+  \caption{Execution times of the single precision floating point program.}
+  \label{fig:float_exe_time}
+ \end{center}
+\end{figure}
+
+\begin{figure}[t]
+ \begin{center}
+  \includegraphics[width=\hsize]{fig/double_exe_time.eps}\\
+  \caption{Execution times of the double precision floating point program.}
+  \label{fig:double_exe_time}
+ \end{center}
+\end{figure}
+
+\begin{figure}[t]
+ \begin{center}
+  \includegraphics[width=\hsize]{fig/time_on_image_size.eps}\\
+  \caption{Impact of the image size on execution times.}
+  \label{fig:time_on_image_sizedouble_exe_time}
+ \end{center}
+\end{figure}
+
+
