--- a/draft/implementation.tex
+++ b/draft/implementation.tex
@@ -67,7 +67,7 @@ The detailed procedure and algorithm description are presented in
 
 \begin{figure}[t]
  \begin{center}
-  \includegraphics[width=\hsize]{fig/breakdown.pdf}\\
+  \includegraphics[width=0.5\hsize]{fig/breakdown.eps}\\
   \caption{The breakdown of computation times.}
   \label{fig:breakdown}
  \end{center}
@@ -118,7 +118,7 @@ program, due to a space constraint.
 
 \begin{figure}[t]
  \begin{center}
-  \includegraphics[width=\hsize]{fig/threads_shape.pdf}\\
+  \includegraphics[width=\hsize]{fig/threads_shape.eps}\\
   \caption{The number of compute threads and their block shape.}
   \label{fig:threads_shape}
  \end{center}
