added experimental results

--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -26,7 +26,7 @@ Features and Deformable Models}
 \IEEEauthorblockN{Kazuya Takeda}
 \IEEEauthorblockA{Dept. of Media Science\\Nagoya University}
 \and
-\IEEEauthorblockN{Seiichi Mita}
+\IEEEauthorblockN{Taiki Kawano and Seiichi Mita}
 \IEEEauthorblockA{Research Center for Smart Vehicles\\Toyota
 Technological Institute}
 }
