--- a/draft/assumption.tex
+++ b/draft/assumption.tex
@@ -35,7 +35,7 @@ The scoring could be conducted for every squire of a few pixels
 independently.
 In consequence, there are approximately 10 million computational
 blocks for a single high-definition image, while the frame-rate needs to
-meet $10$ to $20$ frames per second (FPS) for practical use.
+meet 10$\sim$20 frames per second (FPS) for practical use.
 This data-parallel compute-intensive nature of HOG-based object
 detection motivates the use of GPUs in this paper.
 
